[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/menus/popup/options.gd" type="Script" id=2]
[ext_resource path="res://src/ui/components/sound_control.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/components/expansible_panel.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends PopupMenu

const LANGUAGES = [
	\"pt_BR\",
	\"en\",
	\"es\"
]

func _ready() -> void:
	
	set_process(false)
	
	if \"pt\" in Game.language:
		get_parent().get_parent().text = tr(\"PT_BR\")
		
	else:
		_update_button_text()

func _process(_delta) -> void:
	var trigger: Button = get_parent().get_parent()
	
	rect_global_position = trigger.rect_global_position + Vector2(0, trigger.rect_size.y)
	rect_size = get_parent().get_parent().rect_size

func _on_PopupMenu_about_to_show() -> void:
	set_process(true)

func _on_PopupMenu_popup_hide() -> void:
	
	set_process(false)
	_update_button_text()

func _on_LanguageButton_pressed() -> void:
	
	if visible:
		visible = false
		
	else:
		popup()
		grab_focus()

func _on_PopupMenu_id_focused(id: int) -> void:
	_set_button_text(id)

func _on_PopupMenu_id_pressed(id):
	
	_set_button_text(id)
	Game.language = LANGUAGES[id]

# @main
func _set_button_text(id: int) -> void:
	get_parent().get_parent().text = tr(LANGUAGES[id].to_upper())

func _update_button_text() -> void:
	get_parent().get_parent().text = tr(Game.language.to_upper())

"

[node name="Options" type="WindowDialog"]
anchor_right = 0.22493
anchor_bottom = 0.151333
margin_right = -185.91
margin_bottom = -107.96
rect_min_size = Vector2( 250, 127 )
focus_next = NodePath("MarginContainer/ScrollContainer/MarginContainer/List/FullScreen/CheckBox")
theme = ExtResource( 1 )
window_title = "OPTIONS"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 122.0
rect_min_size = Vector2( 240, 117 )
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 224.0
margin_bottom = 122.0
rect_min_size = Vector2( 224, 118 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="List" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 219.0
margin_bottom = 117.0
rect_min_size = Vector2( 214, 108 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List"]
margin_right = 214.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="CheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/MarginContainer/List/FullScreen"]
margin_left = 1.0
margin_top = 1.0
margin_right = 98.0
margin_bottom = 25.0
rect_min_size = Vector2( 97, 24 )
hint_tooltip = "Press F11 to Toggle Fullscreen"
focus_neighbour_top = NodePath("../../ExpansiblePanel/VBoxContainer/MarginContainer/EcclodeButton")
focus_neighbour_bottom = NodePath("../../MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton")
focus_next = NodePath("../../MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton")
focus_previous = NodePath("../../ExpansiblePanel/VBoxContainer/MarginContainer/EcclodeButton")
focus_mode = 1
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 1
text = "FULLSCREEN"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List"]
margin_top = 26.0
margin_right = 214.0
margin_bottom = 56.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="Language" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2"]
margin_left = 1.0
margin_top = 1.0
margin_right = 213.0
margin_bottom = 29.0
rect_min_size = Vector2( 210, 24 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language"]
margin_right = 143.0
margin_bottom = 28.0
rect_min_size = Vector2( 130, 28 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 1
text = "LANGUAGE"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language"]
margin_left = 143.0
margin_right = 212.0
margin_bottom = 28.0
rect_min_size = Vector2( 65, 24 )
rect_clip_content = true
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 67.0
margin_bottom = 26.0
rect_min_size = Vector2( 65, 24 )
size_flags_horizontal = 3

[node name="LanguageButton" type="Button" parent="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer"]
margin_top = 3.0
margin_right = 65.0
margin_bottom = 21.0
rect_min_size = Vector2( 65, 0 )
focus_neighbour_top = NodePath("../../../../../FullScreen/CheckBox")
focus_neighbour_bottom = NodePath("../../../../../Volume/HBoxContainer/MarginContainer/HSlider")
focus_next = NodePath("../../../../../Volume/HBoxContainer/Mute")
focus_previous = NodePath("../../../../../FullScreen/CheckBox")
size_flags_horizontal = 0
size_flags_vertical = 0
text = "LOREN"

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton"]
layer = 3

[node name="PopupMenu" type="PopupMenu" parent="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer"]
margin_left = 136.0
margin_top = 62.0
margin_right = 189.0
margin_bottom = 132.0
theme = ExtResource( 1 )
items = [ "Pt_Br", null, 0, false, false, 0, 0, null, "", false, "En", null, 0, false, false, 1, 0, null, "", false, "Es", null, 0, false, false, 2, 0, null, "", false ]
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" parent="MarginContainer/ScrollContainer/MarginContainer/List" instance=ExtResource( 3 )]
margin_top = 56.0
margin_right = 214.0
margin_bottom = 90.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/Volume" index="0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 213.0
margin_bottom = 33.0

[node name="Mute" parent="MarginContainer/ScrollContainer/MarginContainer/List/Volume/HBoxContainer" index="0"]
margin_right = 81.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../../../MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton")
focus_neighbour_bottom = NodePath("../../../ExpansiblePanel/VBoxContainer/MarginContainer/EcclodeButton")
focus_previous = NodePath("../../../MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton")

[node name="Padding" parent="MarginContainer/ScrollContainer/MarginContainer/List/Volume/HBoxContainer" index="1"]
margin_left = 81.0
margin_right = 145.0
margin_bottom = 32.0

[node name="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/Volume/HBoxContainer" index="2"]
margin_left = 145.0
margin_right = 212.0
margin_bottom = 32.0

[node name="HSlider" parent="MarginContainer/ScrollContainer/MarginContainer/List/Volume/HBoxContainer/MarginContainer" index="0"]
margin_bottom = 30.0
focus_neighbour_top = NodePath("../../../../MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton")
focus_neighbour_bottom = NodePath("../../../../ExpansiblePanel/VBoxContainer/MarginContainer/EcclodeButton")
focus_next = NodePath("../../../../ExpansiblePanel/VBoxContainer/MarginContainer/EcclodeButton")

[node name="ExpansiblePanel" parent="MarginContainer/ScrollContainer/MarginContainer/List" instance=ExtResource( 4 )]
margin_top = 90.0
margin_right = 214.0
margin_bottom = 112.0

[node name="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel" index="0"]
margin_right = 214.0
margin_bottom = 124.0

[node name="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer" index="0"]
margin_right = 214.0
margin_bottom = 25.0

[node name="EcclodeButton" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/MarginContainer" index="0"]
margin_right = 212.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../../../../Volume/HBoxContainer/MarginContainer/HSlider")
focus_neighbour_bottom = NodePath("../../../../FullScreen/CheckBox")
focus_next = NodePath("../../../../FullScreen/CheckBox")
focus_previous = NodePath("../../../../Volume/HBoxContainer/MarginContainer/HSlider")
text = "CHANNELS"

[node name="Itens" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer" index="1"]
margin_top = 25.0
margin_right = 214.0
margin_bottom = 127.0

[node name="Music" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens" index="0" instance=ExtResource( 3 )]
margin_right = 214.0
channel = 1

[node name="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/Music" index="0"]
margin_right = 212.0

[node name="Mute" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/Music/HBoxContainer" index="0"]
margin_right = 72.0
focus_neighbour_top = NodePath("../../../../MarginContainer/EcclodeButton")
focus_neighbour_bottom = NodePath("../../../BSFXS/HBoxContainer/MarginContainer/HSlider")
focus_previous = NodePath("../../../../MarginContainer/EcclodeButton")
text = "MUSIC"

[node name="Padding" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/Music/HBoxContainer" index="1"]
margin_left = 72.0
margin_right = 143.0

[node name="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/Music/HBoxContainer" index="2"]
margin_left = 143.0
margin_right = 210.0

[node name="HSlider" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/Music/HBoxContainer/MarginContainer" index="0"]
focus_neighbour_top = NodePath("../../../../../MarginContainer/EcclodeButton")
focus_neighbour_bottom = NodePath("../../../../BSFXS/HBoxContainer/MarginContainer/HSlider")
focus_next = NodePath("../../../../BSFXS/HBoxContainer/Mute")

[node name="BSFXS" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens" index="1" instance=ExtResource( 3 )]
margin_top = 34.0
margin_right = 214.0
margin_bottom = 68.0
channel = 2

[node name="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/BSFXS" index="0"]
margin_right = 212.0

[node name="Mute" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/BSFXS/HBoxContainer" index="0"]
margin_right = 126.0
focus_neighbour_top = NodePath("../../../Music/HBoxContainer/Mute")
focus_neighbour_bottom = NodePath("../../../SFXS/HBoxContainer/Mute")
focus_previous = NodePath("../../../Music/HBoxContainer/MarginContainer/HSlider")
text = "ENVIRONMENT"

[node name="Padding" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/BSFXS/HBoxContainer" index="1"]
margin_left = 126.0
margin_right = 143.0

[node name="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/BSFXS/HBoxContainer" index="2"]
margin_left = 143.0
margin_right = 210.0

[node name="HSlider" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/BSFXS/HBoxContainer/MarginContainer" index="0"]
focus_neighbour_top = NodePath("../../../../Music/HBoxContainer/MarginContainer/HSlider")
focus_neighbour_bottom = NodePath("../../../../SFXS/HBoxContainer/MarginContainer/HSlider")
focus_next = NodePath("../../../../SFXS/HBoxContainer/Mute")

[node name="SFXS" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens" index="2" instance=ExtResource( 3 )]
margin_top = 68.0
margin_right = 214.0
margin_bottom = 102.0
channel = 3

[node name="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/SFXS" index="0"]
margin_right = 212.0

[node name="Mute" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/SFXS/HBoxContainer" index="0"]
margin_right = 64.0
focus_neighbour_top = NodePath("../../../BSFXS/HBoxContainer/Mute")
focus_neighbour_bottom = NodePath("../../../../../../FullScreen/CheckBox")
focus_previous = NodePath("../../../BSFXS/HBoxContainer/MarginContainer/HSlider")
text = "SFXS"

[node name="Padding" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/SFXS/HBoxContainer" index="1"]
margin_left = 64.0
margin_right = 143.0

[node name="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/SFXS/HBoxContainer" index="2"]
margin_left = 143.0
margin_right = 210.0

[node name="HSlider" parent="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/SFXS/HBoxContainer/MarginContainer" index="0"]
focus_neighbour_top = NodePath("../../../../BSFXS/HBoxContainer/MarginContainer/HSlider")
focus_neighbour_bottom = NodePath("../../../../../../../FullScreen/CheckBox")
focus_next = NodePath("../../../../../../../FullScreen/CheckBox")

[node name="Tween" type="Tween" parent="."]
[connection signal="focus_entered" from="MarginContainer/ScrollContainer/MarginContainer/List/FullScreen/CheckBox" to="." method="_on_FullScreen_CheckBox_focus_entered"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/MarginContainer/List/FullScreen/CheckBox" to="." method="_on_FullScreen_toggled"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton" to="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" method="_on_LanguageButton_pressed"]
[connection signal="about_to_show" from="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" to="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" method="_on_PopupMenu_about_to_show"]
[connection signal="id_focused" from="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" to="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" method="_on_PopupMenu_id_focused"]
[connection signal="id_pressed" from="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" to="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" method="_on_PopupMenu_id_pressed"]
[connection signal="popup_hide" from="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" to="MarginContainer/ScrollContainer/MarginContainer/List/MarginContainer2/Language/MarginContainer/CenterContainer/LanguageButton/CanvasLayer/PopupMenu" method="_on_PopupMenu_popup_hide"]
[connection signal="ecclosion_started" from="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel" to="." method="_on_ExpansiblePanel_ecclosion_started"]
[connection signal="incclosion_started" from="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel" to="." method="_on_ExpansiblePanel_incclosion_started"]

[editable path="MarginContainer/ScrollContainer/MarginContainer/List/Volume"]

[editable path="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel"]

[editable path="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/Music"]

[editable path="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/BSFXS"]

[editable path="MarginContainer/ScrollContainer/MarginContainer/List/ExpansiblePanel/VBoxContainer/Itens/SFXS"]
